--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "server/index.js",
   "source": "client/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --silent=false",
     "build": "rm -rf dist/* .parcel-cache/* && parcel build ./client/index.html"
   },
   "keywords": [],
@@ -18,7 +18,6 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -34,6 +33,7 @@
   },
   "devDependencies": {
     "buffer": "^5.7.1",
+    "jest": "^29.6.3",
     "process": "^0.11.10"
   }
 }
