--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "server/index.js",
   "source": "client/index.html",
+  "type": "module",
   "scripts": {
     "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --silent=false",
     "build": "rm -rf dist/* .parcel-cache/* && parcel build ./client/index.html"
@@ -18,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
