--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.2.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -37,8 +37,9 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.6.2",
+    "redux": "^5.0.1",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
