--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "type": "module",
   "scripts": {
     "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --silent=false",
+    "start": "parcel",
+    "watch": "parcel watch",
     "build": "rm -rf dist/* .parcel-cache/* && parcel build ./client/index.html"
   },
   "keywords": [],
