--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
+    "mongodb": "^6.5.0",
     "nodemon": "^2.0.20",
     "parcel": "^2.8.2",
     "pg": "^8.8.0",
