--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.2.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
