--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.6.2",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "sequelize": "^6.28.0"
   },
